feat: automated analysis